# firmware

./: .gitmodules  CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/arduino-spoof/: Arduino.c++  Arduino.h  Print.h  SPI.h  Wire.c++  Wire.h  insane-binary-constants.h
src/: adc_spi.h  audio_out.c++  audio_out.h  if_table.h  main.c++  output_filter.c++  output_filter.h  reference_freq.c++  reference_freq.h  ssd1305.c++
